<?xml version="1.0"?>
<package format="2">
  <name>ilm_ros_pkg</name>
  <version>0.0.0</version>
  <description>The ilm-ros-pkg package</description>
  <maintainer email="aaa@todo.todo">aaa</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>camera_calibration_parsers</build_depend>
  <build_export_depend>camera_calibration_parsers</build_export_depend>
  <exec_depend>camera_calibration_parsers</exec_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
